--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ p a:hover {
 }
 .highlight .clearfix {
 	width: 940px;
+
 }
 .highlight h1 {
 	font-size: 32px;
@@ -209,7 +210,7 @@ p a:hover {
 
 body #contents .highlight .clearfix {
 	padding: 35px 0px 0px 0px;
-	margin: 0 310px;
+	margin: 0, 0, 0, 310px;
 }
 body #contents .highlight .clearfix ul li {
 	color: #626262;
