--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 @font-face {
 	font-family: "Open Sans";
-	src: url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800);
+	src: url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
   }
 
 	body {
