--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("font-awesome.min.css");
-@import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
 
 	body {
 		background: #222222;
@@ -169,7 +169,7 @@
 
 		.wrapper.style1 {
 			padding: 0em;
-			background: #222222 url(../images/banner.jpg) no-repeat;
+			background: #222222 url(../images/banner.png) no-repeat;
 			background-size: cover;
 		}
 
@@ -261,11 +261,13 @@
 	}
 
 		#banner .container {
-			padding: 6em 8em;
+			padding: 0 150px 700px;
+
 		}
 
 		#banner h2 {
 			display: inline-block;
+			margin: 0;
 			padding: 0.50em 0.30em;
 			background: #82b440;
 			font-size: 3em;
@@ -273,16 +275,20 @@
 		}
 
 		#banner span, #banner p {
-			display: block;
+			display: inline-block;
 			letter-spacing: 1px;
 			text-transform: uppercase;
 			font-size: 1.6em;
 			font-weight: 300;
-			padding: 0 0 200px 0;
+			padding: 0 0 300px 0;
 		}
 
 		#banner span {
-			padding: 1em 0em;
+			margin: 0;
+			padding: 0px;
+			color: grey;
+			font-weight: 400;
+			
 		}
 
 	#footer {
