--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@
 	}
 
 	#banner {
-		padding: 6em 0em 3em 0em;
+		padding: 6em 0em 11.5em 0em;
 		text-align: center;
 		text-transform: uppercase;
 		color: white;
@@ -289,6 +289,8 @@
 			font-size: 3em;
 			font-weight: 100;
 			font-family: 'Oswald', sans-serif;
+			text-shadow: -1px 0 black;
+			margin-bottom: 15px;
 		}
 
 		#banner span, #banner p {
@@ -303,7 +305,10 @@
 		#banner span {
 			padding: 0;
 			font-family: 'Oswald', sans-serif;
-			font-weight: 100;
+			font-weight: 400;
+			text-shadow: 1px 0 black;
+			font-size: 25px;
+			
 		}
 
 	#footer {
@@ -383,8 +388,12 @@ body {
 }
 
 #areas .major .byline {
-	padding: 0 0 30px 47px;
+	padding: 0 0 30px 40px;
 	font-size: 30px;
+}
+
+.row.flush {
+	margin-left: 10px;
 }
 
 .\36 u { 
